# compute-comparison

./: .gitignore  benchmark.sh  benchmark_results.md
dask/: Containerfile  requirements.txt  run_container.sh  run_python.sh
dask/src/: main.py
dask/src/packs/: completeness.py  unbalanced.py
data-generator/: Cargo.toml  Containerfile  run.sh  run_container.sh  run_rust.sh
data-generator/seed_data/: general_ledger_235_469.parquet
data-generator/src/: main.rs
polars-rust/: Cargo.toml  Containerfile  run_container.sh  run_rust.sh
polars-rust/results/: completeness.parquet  unbalanced.parquet
polars-rust/src/: io.rs  main.rs
polars-rust/src/packs/: completeness.rs  mod.rs  unbalanced.rs
polars-rust/src/utils/: mod.rs  parquet.rs
pyspark/: Containerfile  run_container.sh
pyspark/src/: main.py
pyspark/src/packs/: completeness.py  unbalanced.py
