[package]
name = "data-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
polars = { version = "0.36.2", features = ["lazy", "parquet", "strings", "concat_str", "streaming"] }
rayon = "1.8.1"
